# formal

./: .gitignore  CLAUDE.md  LICENSE  LICENSE.bsd-3.md  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: GUIDE.md  index.md  package-lock.json  package.json  troubleshooting.md
docs/.vitepress/: config.mts
docs/development/: index.md  releasing.md
docs/guide/: api-reference.md  deployment.md  doc-comments.md  index.md  sidebar.md  site-structure.md  workflows.md  writing-pages.md
scripts/: build_publish.sh
src/formal/: __init__.py  __main__.py  cli.py  generator.py  scaffold.py
tests/: conftest.py  mocks.py  test_classify.py  test_cli.py  test_entity_formatters.py  test_formatting.py  test_integration.py  test_scaffold.py
tests/fixtures/: sample_module.F90
