[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "formal-ford2vitepress"
version = "0.2.10"
description = "FORMAL: Fortran FORD VitePress Markdown Documentation HTML generator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Stefano Zaghi", email = "stefano.zaghi@gmail.com" },
]
keywords = ["fortran", "documentation", "ford", "vitepress", "api-docs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Fortran",
    "Topic :: Documentation",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "ford>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/szaghi/formal"
Repository = "https://github.com/szaghi/formal"
Issues = "https://github.com/szaghi/formal/issues"

[project.scripts]
formal = "formal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring FORD installed (may be slow)",
]

[tool.ruff]
line-length = 120
